// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailFeeDetermination component > renders a complete lease as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c2 {
  float: right;
  cursor: pointer;
  font-size: 3.2rem;
}

.c1 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c5 {
  font-size: 1.4rem;
  margin-top: 1rem;
}

<div
    class="c0 form-section"
  >
    <h2
      class="c1"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="col"
        >
          Fee Determination
        </div>
        <div
          class="pl-8 d-flex align-items-end col-auto"
        >
          <svg
            class="c2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              collapse-section
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m7 14 5-5 5 5z"
            />
          </svg>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Public benefit:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="form-group"
          >
            <select
              class="form-select form-control"
              id="input-isPublicBenefit"
              name="isPublicBenefit"
            >
              <option
                value="null"
              >
                Unknown
              </option>
              <option
                value="true"
              >
                Yes
              </option>
              <option
                value="false"
              >
                No
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Financial gain:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="form-group"
          >
            <select
              class="form-select form-control"
              id="input-isFinancialGain"
              name="isFinancialGain"
            >
              <option
                value="null"
              >
                Unknown
              </option>
              <option
                value="true"
              >
                Yes
              </option>
              <option
                value="false"
              >
                No
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Suggested fee:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <span
            data-testid="suggestedFee"
          >
            $1 - Nominal
          </span>
          <div
            class="c5"
          >
            <p
              class="m-0"
            >
              <b>
                Nominal: 
              </b>
              No or nominal fee determinations should include justification in the Comments field.
            </p>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Notes:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          fee determination test note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailFeeDetermination component > renders minimally as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c2 {
  float: right;
  cursor: pointer;
  font-size: 3.2rem;
}

.c1 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c5 {
  font-size: 1.4rem;
  margin-top: 1rem;
}

<div
    class="c0 form-section"
  >
    <h2
      class="c1"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="col"
        >
          Fee Determination
        </div>
        <div
          class="pl-8 d-flex align-items-end col-auto"
        >
          <svg
            class="c2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              collapse-section
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m7 14 5-5 5 5z"
            />
          </svg>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Public benefit:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="form-group"
          >
            <select
              class="form-select form-control"
              id="input-isPublicBenefit"
              name="isPublicBenefit"
            >
              <option
                value="null"
              >
                Unknown
              </option>
              <option
                value="true"
              >
                Yes
              </option>
              <option
                value="false"
              >
                No
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Financial gain:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="form-group"
          >
            <select
              class="form-select form-control"
              id="input-isFinancialGain"
              name="isFinancialGain"
            >
              <option
                value="null"
              >
                Unknown
              </option>
              <option
                value="true"
              >
                Yes
              </option>
              <option
                value="false"
              >
                No
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Suggested fee:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <span
            data-testid="suggestedFee"
          >
            Unknown
          </span>
          <div
            class="c5"
          />
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Notes:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
